Termino las operaciones CRUD para productos.

--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 	  <java.source>1.8</java.source> 
 	  <java.target>1.8</java.target> 
 	  <spring.version>5.2.4.RELEASE</spring.version>
+	  <spring.boot.version>2.2.4.RELEASE</spring.boot.version>
 	  <hibernate.version>5.2.11.Final</hibernate.version>
 	  <hibernate.validator>6.1.5.Final</hibernate.validator>
 	  <c3p0.version>0.9.5.3</c3p0.version>	
@@ -190,11 +191,16 @@
 		    	<groupId>org.springframework</groupId>
 		    	<artifactId>spring-oxm</artifactId>
 		    	<version>${spring.version}</version>
-		 </dependency>		
+		 </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>${spring.boot.version}</version>
+        </dependency>		 		
 		<dependency>
 		    <groupId>org.springframework.boot</groupId>
 		    <artifactId>spring-boot-starter-test</artifactId>
-		    <version>2.2.4.RELEASE</version>
+		    <version>${spring.boot.version}</version>
 		    <scope>test</scope>
 		</dependency>
 
