--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,11 @@
 			<version>1.6</version>
 		</dependency>
 		<dependency>
+		    <groupId>org.apache.commons</groupId>
+		    <artifactId>commons-math3</artifactId>
+		    <version>3.6.1</version>
+		</dependency>		
+		<dependency>
 			<groupId>com.sun.xml.bind</groupId>
 	    	<artifactId>jaxb-impl</artifactId>
 	    	<version>2.2.5-b10</version>
