Terminada primera versión con un flujo sencillo pero completo.

--- a/src/main/resources/es/golemdr/tiendaweb/client/messages/ApplicationResources.properties
+++ b/src/main/resources/es/golemdr/tiendaweb/client/messages/ApplicationResources.properties
@@ -41,6 +41,8 @@ label.exportar.pdf= Exportar PDF
 label.gestor=Gestor
 label.logout=Cerrar sesión
 
+pedido.ok = El pedido se realizó correctamente
+
 # Aqui van las etiquetas generadas para las entidades
 
 
@@ -57,7 +59,12 @@ label.alta.producto = Alta Producto
 label.listado.productos = Listado Productos
 label.busqueda.productos = B?squeda Productos
 
-
+# Clientes
+label.nombre.cliente = Nombre
+label.apellidos = Apellidos
+label.dni = DNI
+label.telefono = Teléfono
+label.direccion = Dirección
 
 # Errores
 # OJO --> Muy importante definir aquï¿½ el tipo de error (required, minlength,...) porque si no no funciona el validator
