Incluyo la validación del formulario de productos. Incluyo la recuperación dinámica de categorías.

--- a/src/main/resources/es/golemdr/tiendaweb/client/messages/ApplicationResources.properties
+++ b/src/main/resources/es/golemdr/tiendaweb/client/messages/ApplicationResources.properties
@@ -83,12 +83,13 @@ excepcion.error.login=Se produjo un error en el login. Vuelva a intentarlo
 # Validaciones de formularios
 
 # Productos
-NotEmpty.producto.familia=La familia es obligatoria
-NotEmpty.producto.atributo=El atributo es obligatorio
-NotEmpty.producto.literal=El literal es obligatorio
-NotNull.producto.valor=El valor es obligatorio
-typeMismatch.producto.valor=El valor tiene que ser un número
-Min.producto.valor=El valor tiene que ser igual o mayor que 1
+NotEmpty.productoForm.nombre=El nombre es obligatorio
+NotNull.productoForm.precio=El precio es obligatorio
+DecimalMin.productoForm.precio=El precio tiene que ser mayor que 0
+NotEmpty.productoForm.nombreFoto=El nombre de la foto es obligatorio
+NotEmpty.productoForm.idCategoria=La categoría es obligatoria
+typeMismatch.productoForm.precio=El precio tiene que ser un número con formato #.##
+
 
 
 
