Validación del formulario de cliente.

--- a/src/main/resources/es/golemdr/tiendaweb/client/messages/ApplicationResources.properties
+++ b/src/main/resources/es/golemdr/tiendaweb/client/messages/ApplicationResources.properties
@@ -89,6 +89,13 @@ DecimalMin.productoForm.precio=El precio tiene que ser mayor que 0
 NotEmpty.productoForm.nombreFoto=El nombre de la foto es obligatorio
 NotEmpty.productoForm.idCategoria=La categoría es obligatoria
 typeMismatch.productoForm.precio=El precio tiene que ser un número con formato #.##
+ 
+# Cliente
+NotEmpty.cliente.nombre=El nombre es obligatorio
+NotEmpty.cliente.apellidos=Los apellidos son obligatorios
+NotEmpty.cliente.direccion=La dirección es obligatoria 
+Pattern.cliente.telefono=Debe proporcionar un teléfono con un formato válido
+NotEmpty.cliente.dni=El DNI es obligatorio
 
 
 
